# smol-tar.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
examples/smol-tar-bin/: Cargo.toml  README.md
examples/smol-tar-bin/src/: main.rs
examples/smol-tar-bin/tests/: cli_tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: tar.rs
src/: lib.rs
tests/: tar_tests.rs
tests/data/: gnu_long_name.tar  pax.tar  seed_hardlink_ignores_pax_metadata.tar  seed_invalid_header_uname_utf8.tar  seed_invalid_malformed_pax.tar  seed_invalid_pax_uid_overflow.tar  seed_old_style_directory.tar  seed_pax_extended_metadata.tar  seed_pax_overrides_gnu_times.tar  seed_pax_symbolic_name_precedence.tar  seed_pax_xattr_precedence.tar  seed_symbolic_names_and_times.tar  simple.tar
xtask/src/: main.rs
